# kledo-api-mcp

./: .coveragerc  .env.example  .gitignore  404.html  API_MAPPING.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MCP_MODERNIZATION.md  MCP_SERVER_UPDATES.md  README.md  TESTING.md  Untitled  api-1.json  api-1.yaml  demo_natural_language.py  index.html  install.sh  kledo_mcp.py  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  query.sh  requirements.txt  setup.py  sitemap.xml  test_21_queries.py  test_company_fixes.py  test_company_search.py  test_connection.py  test_data_retrieval.py  test_disambiguation.py  test_results_21_queries.json  test_simple.sh  test_with_inspector.sh
.claude/: settings.local 2.json
.github/workflows/: docs.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ERD_README/: index.html
config/: cache_config.yaml  endpoints.yaml  sales_targets.json
docs/: ERD_README.md  getting-started.md  index.md
docs/entities/: account.md  contact.md  delivery.md  index.md  invoice.md  order.md  product.md
docs/technical/: ANALYTICS_CAPABILITY_MAP.md  API_ARCHITECTURE.md  FIELD_MAPPING_DECISION.md  QUICK_DECISIONS_SUMMARY.md  QUICK_REFERENCE.md  README.md  SESSION_HANDOFF.md
docs/tools/: choosing.md  disambiguation.md  index.md
entities/: index.html
entities/account/: index.html
entities/contact/: index.html
entities/delivery/: index.html
entities/invoice/: index.html
entities/order/: index.html
entities/product/: index.html
getting-started/: index.html
scripts/: capture_api_fixtures.py  extract_tools.py  generate_entity_docs.py
search/: search_index.json
src/: auth.py  cache.py  cli.py  config_manager.py  date_parser.py  kledo_client.py  server.py  server_backup.py  server_fixed.py  setup.py
src/entities/: __init__.py  loader.py
src/mappers/: __init__.py  kledo_mapper.py
src/models/: __init__.py  invoice_financials.py
src/routing/: __init__.py  date_parser.py  fuzzy.py  patterns.py  router.py  scorer.py  synonyms.py
src/tools/: __init__.py  analytics.py  commission.py  contacts.py  deliveries.py  financial.py  invoices.py  orders.py  products.py  revenue.py  sales_analytics.py  utilities.py
src/utils/: helpers.py  logger.py  targets.py
technical/: index.html
technical/ANALYTICS_CAPABILITY_MAP/: index.html
technical/API_ARCHITECTURE/: index.html
technical/FIELD_MAPPING_DECISION/: index.html
tests/: 05-OPTIMIZATION-ROADMAP.md  05-UAT-EXECUTIVE-SUMMARY.md  05-UAT-FINANCE-ANALYST-REPORT.md  05-UAT-VERIFICATION-TESTS.md  CRITICAL_MISSING_FIELDS.md  FIELD_MAPPING_ANALYSIS.md  FINAL_FIELD_MAPPING.md  IMPLEMENTATION-SUMMARY.md  QUERY-EXAMPLES.md  README-05-UAT.md  REVENUE_FIELD_MAPPING.md  SALES_ANALYTICS_READY.md  STATUS_ANALYSIS.md  analysis_output.txt  api_revenue_mapping.py  api_revenue_mapping_auto.py  api_samples.json  api_structure_output.txt  check_raw_api_field.py  conftest.py  deep_status_analysis.py  list_vs_detail_comparison.txt  status_analysis_data.json  test_all_tools.py  test_api_structure.py  test_auth.py  test_cache.py  test_cli.py  test_field_mappings.py  test_finance_enhancements.py  test_kledo_client.py  test_kledo_mapper.py  test_list_vs_detail.py  test_mcp_realistic_queries.py  test_sales_analytics_live.py  test_server.py  test_server_wrappers.py  test_setup_wizard.py  test_simple_api_call.py  test_tool_quality.py  (+10 more)
tools/: index.html
tools/choosing/: index.html
(+96 files in other folders)
